--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "type": "commonjs",
   "scripts": {
     "start": "vite",
-    "build": "tsc && vite build",
+    "build": "eslint -c eslint.config.mjs && tsc && vite build",
     "serve": "vite preview",
-    "test": "vitest run"
+    "test": "vitest run",
+    "lint": "eslint -c eslint.config.mjs"
   },
   "author": "lanseg",
   "license": "MIT",
@@ -15,9 +16,13 @@
     "ol": "latest"
   },
   "devDependencies": {
+    "@eslint/js": "^9.14.0",
     "cypress": "^13.15.1",
+    "eslint": "^9.14.0",
+    "globals": "^15.12.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.6.3",
+    "typescript-eslint": "^8.13.0",
     "vite": "^5.4.2",
     "vitest": "^2.1.3"
   }
