--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "type": "module",
   "scripts": {
     "start": "vite",
-    "build": "eslint -c eslint.config.mjs && tsc && vite build",
+    "build": "vitest run && eslint -c eslint.config.mjs && tsc && vite build",
     "serve": "vite preview",
     "test": "vitest run",
-    "lint": "eslint -c eslint.config.mjs"
+    "lint": "eslint -c eslint.config.mjs",
+    "test:browser": "vitest --workspace=vitest.workspace.ts"
   },
   "author": "lanseg",
   "license": "MIT",
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.16.0",
+    "@vitest/browser": "^2.1.4",
     "cypress": "^13.15.1",
     "eslint": "^9.16.0",
     "globals": "^15.12.0",
@@ -24,6 +26,7 @@
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.17.0",
     "vite": "^5.4.2",
-    "vitest": "^2.1.3"
+    "vitest": "^2.1.3",
+    "webdriverio": "^9.4.2"
   }
 }
